--- a/images/css/style.css
+++ b/images/css/style.css
@@ -2,7 +2,7 @@ p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 1.5;
     margin: 0;
-    background-color: 7251b5;
+    background-color: #7251b5;
 }
 h1, h2, h3 {
     margin-bottom: 0;
